# Task-Tracker

./: .gitignore  README.md  constants.py  main.py  pyproject.toml
data/: tasks.json
functions/: __init__.py  task_handler.py  task_status.py
tests/: __init__.py  test_main.py
utilities/: __init__.py  exit.py  start_id.py  time.py
