[project]
name = "taskTracker"
version = "0.1.0"
description = "This is a tool to track daily tasks, the main goal is to have something fast and simple tuo use (and I wanted to practice some coding)"
authors = [
    {name = "AMATOK"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"